--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "react-native": "^0.21.0",
+    "react-native-vector-icons": "^1.3.2",
     "redux": "^3.3.1"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.1.1"
   }
 }
