--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "lodash": "^4.7.0",
     "react-native": "^0.21.0",
     "react-native-vector-icons": "^1.3.2",
     "redux": "^3.3.1"
